# dynamic_agent_crew

./: README.md  pyproject.toml
src/dynamic_agent_crew/: crew.py  main.py  utils.py
src/dynamic_agent_crew/config/: crew.yaml
src/guga_agent/: main.py
