[project]
name = "guga_agent"
version = "0.1.0"
description = "guga_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
guga_agent = "guga_agent.main:run"
run_crew = "guga_agent.main:run"
train = "guga_agent.main:train"
replay = "guga_agent.main:replay"
test = "guga_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
