[project]
name = "dynamic_agent_crew"
version = "0.1.0"
description = "dynamic_agent_crew using crewAI"
authors = [{ name = "Gustavo Mistrinelli", email = "gmistrinelli@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
dynamic_agent_crew = "dynamic_agent_crew.main:run"
run_crew = "dynamic_agent_crew.main:run"
train = "dynamic_agent_crew.main:train"
replay = "dynamic_agent_crew.main:replay"
test = "dynamic_agent_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
